package org.example.bookmyshow.models;

public enum BookingStatus {

    PENDING,
    CONFIRMED,
    CANCELLED,
    PENDING_PAYMENT,
    COMPLETED
}
