package org.example.bookmyshow.models;

public enum FormatType {

    TWO_D(),
    THREE_D(),
    FOUR_DX(),
    DOLBY_ATMOS();
}
