package org.example.bookmyshow.models;

public enum LanguageType {

    HINDI,
    TELUGU,
    ENGLISH,
    TAMIL,
    MALAYALAM,
    KANNADA
}
